--- a/package.json
+++ b/package.json
@@ -49,7 +49,12 @@
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.4.5",
     "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
     "jest-babel-preprocessor": "^0.3.0",
