--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
+    "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -56,6 +57,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "gh-pages": "^0.12.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
     "jest-babel-preprocessor": "^0.3.0",
