--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "webpack-dev-server": "^2.1.0-beta.0"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
