--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     },
     "transform": {
       ".*": "<rootDir>/node_modules/jest-babel-preprocessor/preprocessor.js"
-    }
+    },
+    "scriptPreprocessor": "<rootDir>/node_modules/jest-babel-preprocessor/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
@@ -57,6 +61,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "file-loader": "^0.10.0",
     "gh-pages": "^0.12.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
@@ -66,14 +71,17 @@
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-svg-loader": "^1.1.1",
     "react-test-renderer": "^15.4.2",
     "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
+    "svgo": "^0.7.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.1.0-beta.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
