--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "jquery": "^3.1.1",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-router": "^3.0.2"
   }
 }
