--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jest": "^18.1.0",
     "jest-babel-preprocessor": "^0.3.0",
     "jest-cli": "^18.1.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^4.5.0",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.4.2",
